# prm

./: .gitignore  LICENSE  README.md  infer.py  pyproject.toml  train.py
.github/workflows/: ci.yml
examples/: infer.py  tree.py
src/prm/: __init__.py  decode.py  trainer.py
