[tool.poetry]
name = "prm"
version = "0.1.0"
description = "Utilities for training and evaluating models with process reward modeling."
authors = ["sdiehl <stephen.m.diehl@gmail.com>"]
readme = "README.md"
packages = [{include = "prm", from = "src"}]

[tool.poetry.dependencies]
python = "^3.12"
trl = "^0.12.1"
transformers = "^4.48.0"
datasets = "^3.1.0"
mypy = "^1.13.0"

[tool.poetry.group.dev.dependencies]
black = "^24.10.0"
ruff = "^0.8.0"

[tool.poetry.group.decode]
optional = true

[tool.poetry.group.decode.dependencies]
decoding = "^0.1.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
disallow_incomplete_defs = "false"
disallow_untyped_defs = "false"
strict = "true"
pretty = "true"
warn_return_any = "true"
warn_unused_configs = "true"
warn_redundant_casts = "true"
warn_unused_ignores = "true"
ignore_missing_imports = "true"
no_implicit_reexport = "true"
strict_optional = "true"
strict_equality = "true"
extra_checks = "true"
check_untyped_defs = "true"
disallow_subclassing_any = "true"
disallow_untyped_decorators = "true"
disallow_untyped_calls = "true"
disallow_any_generics = "true"
follow_imports = "silent"